manifests/overlays/moc/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: el-aicoe-ci-listener
spec:
  host: el-aicoe-ci-listener-opf-ci-pipelines.apps.cnv.massopen.cloud
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-aicoe-ci-listener
    weight: 100
  wildcardPolicy: None
