manifests/overlays/moc/tekton-dashboard.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: tekton-route53
    namespace: tekton-pipelines
spec:
    host: tekton.operate-first.cloud
    to:
        kind: Service
        name: tekton-dashboard
    tls:
        caCertificate: ENC[AES256_GCM,data:LKxjJD/1JeKW5ggXyWDqFni7Bao/evsu/3pyREPiqLXjVMhkKjJM46ZhJqMNqzVu+xtOLb8XR3kXWG+dqXdozOCvwFz0g+grUlxd2RbnQ2yNUmMszCjvWy7sMxwOEzHRW+K3NQVqHwkZWUWMG4MDd74+D0YyClCAiRhpIs7STM2fcBiJPcq/RWa8gvj8ziRX0UqLP4iS3bU6dcW/OTmn3UF6YDorZELjOSTtq0utuIV2YB0p1Ah9xbHD5RttOs7cfpy5N/Vud9u+zW3TRNXniHokwhkznEVzNmWIpTp528sZ166kyDUYwNhrXn/lRtx61cVgE8FxoJexno7MhFONOwu///pDn4nk2zGEn2efl6S/uYGbN+vKSE3/uRms+R3FTwg/HTRnemkEPo/iCtoTun4jnA7484S1+pjSXH8agoVK4QxqaAlppThsZ6f3ZBgyMRt0JKTWy [...]
        certificate: ENC[AES256_GCM,data:AlkFB/ZM/D4v97HEDFfff4jnBXPwDoOmlDSs4fgPdF8qKY8kCnIB86DpQlSNu94sXMqnxBgwx+cnVHxvgyjAEr7/sg7nUE+FWqveeFp2TuzzrZ8iC3T/QqQzplAmqVVmue9CP22m+zbaV0JlCsm1CuU2TUa8iSLabJJFuDHnD5sQEa9iTA5tLBkHuB5V2vRVEDEozifDQcjp5v4bwYgZ5ZWJMIPBzvmG3P9be7Ug/EHreNPhYnCCPaIGbf974VDrLyhpHX0X3SQkmCyP+h8AS6nSZTJIN1+rAh+w60nZOjHTVNVfzD8rvkkX5o8NZZpsawCyOs8Cu28In5UXrZ9I7saoF21Jbql9WVKfE01nUC+KBnFV85bfM87kuW4dOKh7RaPpnGT/AOODYH88vOuTjZ81CN8SfnWy+VZgFzWMVG0czKSulvCgMPn/u2YiGmoFc39P4p5wETl [...]
        key: ENC[AES256_GCM,data:LqL68NIzIAisLQcOLGjgbh5+uETSxBP+Yig38Y/p/vQ9KpUpXRsWhe2ePToa/T0gf4XXR3Mor0zR3kTp8rdB0RxTbvQtB+zdxlLVtTd4jkFE+cVKemxRRMaiMEnixHs38I1Iy1Nz/9v8YePvIheEE+44P7gv9LVY9HVb+taxiewoR/Sh42HcaXeWOe9Dt4qhsWPQzVgZ+46CHJBgI/qmk4/JhEhTdoz+0bW6FZOIW8qpFaZFfv4ud4SKYagD0Ds8QGP3FC7Jrmvgxm6MRbwY1wAHGhoCoFRKtOpqqCOc+9JAsS70lBQXOrf/kpqhOFBt/eqbxVTltBn5je9+XQmhFCM0bvHalOnkY1kDjTJLTmkPqZbwqd/V0bSQGODNBTevcdPyo4XNH9BmLyol6UAYH8VEGUz2OGE529o6wP9K6FyvxssFEAgBWNgUBSGNNLhLQyKgAWQG0nqsO0hZ8/Q [...]
        termination: ENC[AES256_GCM,data:jR1Sog==,iv:s8Y3iOgRE0bIjt2nk0OZFeBYCF7VX9zr9cG8aB93zPA=,tag:Wv1Eq3GV1jlwE9arojvNMA==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    lastmodified: '2021-06-10T13:32:58Z'
    mac: ENC[AES256_GCM,data:HVv75lNlCOWFkPUuOdcZYGen8XmWqq3AlmRYt5Xt/KJHFp5lusjoGIhfViUpzZZWjab3YekzVWGTM0CHEGYyFEz5WT3DlTDqS09hPfUC6ll9h3+31oxWiuioY97BCZLdAV722qX/WoprtDQAZC7xy/ivdYqjQMYqjhbVOs5+y0M=,iv:56mig2y38j0o1kz4DJi1zZIlO9Z7xD3eXYGAu80KWFY=,tag:8aFTSxsWH6l2ryKCreRM/g==,type:str]
    pgp:
    -   created_at: '2021-06-10T13:32:58Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA+/WpawS9RPbAQf/URXGYJkcL3uZUDTuSNWh8y3tt/0jrOi0CyHwvO122CPX
[...]
            2sUudN3SF/kjR2vmM5by4uY4hitsee2F0CxyUs0=
            =aYf5
            -----END PGP MESSAGE-----
        fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
    -   created_at: '2021-06-10T13:32:58Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf/fEEZB+Y3OITY9tnLJz6VkIP3k6OuXLOqCA+FciMq0S7s
[...]
            clG9k9lEl2mEb/+7Rp6PokBJEebe9EwmazjA8zQ=
            =qoWZ
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    -   created_at: '2021-06-10T13:32:58Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA9aKBcudqifiARAAuIZCq979zs6pvxDCQMbqIRFEdn/IzmZMmJgtUQYdrTWE
[...]
            =WeG/
            -----END PGP MESSAGE-----
        fp: 0508677DD04952D06A943D5B4DC4116D360E3276
    encrypted_regex: ^(tls|data|stringData)$
    version: 3.5.0
