manifests/overlays/moc/tekton-dashboard.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: tekton-route53
    namespace: tekton-pipelines
    annotations:
        kubernetes.io/tls-acme: "true"
spec:
    host: tekton.operate-first.cloud
    to:
        kind: Service
        name: tekton-dashboard
